--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <main>
         <div class="card">
           <img
-            src="./images/image-qr-code.png"
+            src="./image-qr-code.png"
             alt="QR code to Frontend Mentor"
           />
           <h1>Improve your front-end<br />skills by building projects</h1>
@@ -44,3 +44,4 @@
     </div>
   </body>
 </html>
+
